--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
     <section class="hero-image">
       <h1 class="heading">Никита Лобанов</h1>
-      <p>Пока даже не Джун, но мечу в Синьор Тимлиды и бизнес</p>
+      <p>Будущий Full-Stack разработчик. В далёком будущем - владелец бизнеса в IT-сфере</p>
     </section>
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
-      <p>Рэально классный и преспективный девелопер. Жду сердечки, девочки.</p>
+      <p>Рэально классный и преспективный девелопер. увлекаюсь книгами и программирование. Жду сердечки, девочки.</p>
       <h3>Чем могу быть полезен</h3>
-      <p>Быстроразвивающийся молодой чебупель. Буду Full-Stack разработчиком.</p>
+      <p>Быстроразвивающийся молодой чебупель. С горем пополам могу сверстать макет из PSD. Подождите 2 месяца и смогу написать сайт</p>
     </section>
 
     <section class="portfolio">
@@ -38,7 +38,7 @@
     </section>
 
     <footer class="page-footer">
-      Контакты в подвале
+    	<a href="https://vk.com/nikitoda70">Страница ВКонтакте</a>  
     </footer>
   </body>
 </html>
