--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
       <h3>Пара слов о себе</h3>
-      <p>Рэально классный и преспективный девелопер. увлекаюсь книгами и программирование. Жду сердечки, девочки.</p>
+      <p>Рэально классный и преспективный девелопер. увлекаюсь книгами и программированием. Жду сердечки, девочки.</p>
       <h3>Чем могу быть полезен</h3>
       <p>Быстроразвивающийся молодой чебупель. С горем пополам могу сверстать макет из PSD. Подождите 2 месяца и смогу написать сайт</p>
     </section>
