--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <header class="page-header">
     	<div class="container">
       <a href="https://vk.com/nikitoda70">Страница ВКонтакте</a>
+      <a class="header-phone" href="tel:+79234175772">+7 923 417 57 72</a>
+      <a class="header-email" href="mailto:nikitoda70@mail.ru">nikitoda70@mail.ru</a>
       	</div>
     </header>
 
@@ -21,6 +23,9 @@
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+    <figure class="user-image">
+  		<img src="files/user.jpg" width="928" height="536" alt="Фотография Никиты Лобанова">
+	</figure>
       <h3>Пара слов о себе</h3>
       <p>Рэально классный и преспективный девелопер. увлекаюсь книгами и программированием. Жду сердечки, девочки.</p>
       <h3>Чем могу быть полезен</h3>
@@ -29,7 +34,9 @@
 
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
-
+		<figure class="project-image">
+  			<img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+		</figure>
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
@@ -38,7 +45,9 @@
     </section>
 
     <footer class="page-footer">
-    	<a href="https://vk.com/nikitoda70">Страница ВКонтакте</a>  
+    	<a href="https://vk.com/nikitoda70">Страница ВКонтакте</a>
+    	<a class="footer-phone" href="tel:+79234175772">+7 923 417 57 72</a>
+		<a class="footer-email" href="mailto:nikitoda70@mail.ru">nikitoda70@mail.ru</a>
     </footer>
   </body>
 </html>
