--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="hero-image">
     	<div class="container">
       <h1 class="heading">Никита Лобанов</h1>
-      <p>Будущий Full-Stack разработчик. В далёком будущем - владелец бизнеса в IT-сфере</p>
+      <p>Будущий Full-Stack разработчик. В будущем - владелец бизнеса в IT-сфере</p>
   		</div>
     </section>
 
@@ -31,10 +31,10 @@
 	</figure>
 	<div>
       <h3>Пара слов о себе</h3>
-      <p>Рэально классный и преспективный девелопер. увлекаюсь книгами и программированием. Жду сердечки, девочки.</p>
+      <p>Рэально классный и преспективный девелопер. Увлекаюсь книгами, сериальчиками и программированием. Жду сердечки, девочки.</p>
     </div>
       <h3>Чем могу быть полезен</h3>
-      <p>Быстроразвивающийся молодой чебупель. С горем пополам могу сверстать макет из PSD. Подождите 2 месяца и смогу написать сайт</p>
+      <p>Быстроразвивающийся молодой чебупель. С горем пополам могу сверстать макет из PSD. Подождите 2 месяца и смогу написать сайт.</p>
     <div class="skills">
       <h3>Мои навыки</h3>
       <dl class="skills-list">
