--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</figure>
 	<div>
       <h3>Пара слов о себе</h3>
-      <p>Рэально классный и преспективный девелопер. Увлекаюсь книгами, сериальчиками и программированием. Жду сердечки, девочки.</p>
+      <p>Рэально классный и перспективный девелопер. Увлекаюсь книгами, сериальчиками и программированием. Жду сердечки, девочки.</p>
     </div>
       <h3>Чем могу быть полезен</h3>
       <p>Быстроразвивающийся молодой чебупель. С горем пополам могу сверстать макет из PSD. Подождите 2 месяца и смогу написать сайт.</p>
