--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-    <title>Портфолио Junior-верстальщика</title>
+    <title>Никита Лобанов - веб-разработчик</title>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
     <section class="hero-image">
     	<div class="container">
       <h1 class="heading">Никита Лобанов</h1>
-      <p>Будущий Full-Stack разработчик. В будущем - владелец бизнеса в IT-сфере</p>
+      <p>Full-Stack разработчик. Верстаю сайты на заказ.</p>
   		</div>
     </section>
 
@@ -31,10 +31,12 @@
 	</figure>
 	<div>
       <h3>Пара слов о себе</h3>
-      <p>Рэально классный и перспективный девелопер. Увлекаюсь книгами, сериальчиками и программированием. Жду сердечки, девочки.</p>
+      <p>Увлекаюсь программированием, книгами и сериалами. Быстрообучаемый.</p>
     </div>
+    <div>
       <h3>Чем могу быть полезен</h3>
-      <p>Быстроразвивающийся молодой чебупель. С горем пополам могу сверстать макет из PSD. Подождите 2 месяца и смогу написать сайт.</p>
+      <p>Сверстаю сайт, напишу калькулятор на Javascript'е, запущу Майнкрафт, шоб не лагало.</p>
+    </div>
     <div class="skills">
       <h3>Мои навыки</h3>
       <dl class="skills-list">
@@ -44,7 +46,7 @@
       	</dd>
       	<dt class="skill-css">CSS</dt>
       	<dd class="level">
-      		<div style="width: 40%">40%</div>
+      		<div style="width: 70%">70%</div>
       	</dd>
       </dl>
   	</div>
@@ -53,16 +55,18 @@
 
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
+      <div class="exp">
 		<figure class="project-image">
   			<img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
 		</figure>
-		<div class="container">
+		<div>
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       	</div>
+      </div>
     </section>
 
     <footer class="page-footer">
